testsuite/gsksl/errors/block-array-member-comparison.glsl
uniform Foo {
  int x;
} x[2][3][4];

void main()
{
  bool t = x[1] == x[0];
}
